--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-validator": "^5.2.0"
+    "express-async-errors": "^2.1.2",
+    "express-validator": "^5.2.0",
+    "random-puppy": "^1.1.0"
   }
 }
